chore: ignore bin (#219)
* chore: ignore bin

* chore: add comment on ignoring bin

--- a/.gitignore
+++ b/.gitignore
@@ -95,6 +95,9 @@ secrets.json
 # Claude Code local settings
 .claude/settings.local.json
 
+# Generated symbolic links from install script
+bin/
+
 # Build artifacts
 dist/
 build/
